// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search renders search form with default state 1`] = `
<div>
  <div
    class="sc-aXZVf ceaXAa"
  >
    <div
      class="sc-gEvEes bodeOL"
    >
      <div
        class="sc-eqUAAB"
      >
        <div>
          <label
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-label="Сортировать"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with all params 1`] = `
<div>
  <div
    class="sc-aXZVf ceaXAa"
  >
    <div
      class="sc-gEvEes bodeOL"
    >
      <div
        class="sc-eqUAAB"
      >
        <div>
          <label
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-label="Сортировать"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value="2024-01 — 2024-12"
        />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div>
          <span>
            foo
            <button
              aria-label="Удалить тег foo"
              type="button"
            >
              ×
            </button>
          </span>
          <span>
            bar
            <button
              aria-label="Удалить тег bar"
              type="button"
            >
              ×
            </button>
          </span>
          <span>
            baz
            <button
              aria-label="Удалить тег baz"
              type="button"
            >
              ×
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with date range params 1`] = `
<div>
  <div
    class="sc-aXZVf ceaXAa"
  >
    <div
      class="sc-gEvEes bodeOL"
    >
      <div
        class="sc-eqUAAB"
      >
        <div>
          <label
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-label="Сортировать"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value="15-01-2024 — 31-12-2024"
        />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with order param 1`] = `
<div>
  <div
    class="sc-aXZVf ceaXAa"
  >
    <div
      class="sc-gEvEes bodeOL"
    >
      <div
        class="sc-eqUAAB"
      >
        <div>
          <label
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-label="Сортировать"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with tags param 1`] = `
<div>
  <div
    class="sc-aXZVf ceaXAa"
  >
    <div
      class="sc-gEvEes bodeOL"
    >
      <div
        class="sc-eqUAAB"
      >
        <div>
          <label
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-label="Сортировать"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div />
      </div>
      <div
        class="sc-eqUAAB"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div>
          <span>
            landscape
            <button
              aria-label="Удалить тег landscape"
              type="button"
            >
              ×
            </button>
          </span>
          <span>
            portrait
            <button
              aria-label="Удалить тег portrait"
              type="button"
            >
              ×
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
